[package]
name = "eliasfl-chess"
description = "A dependency-free chess engine/library and cli test made by Elias Floreteng during the KTH DD1337 Programming course. Playable through the command-line."
repository = "https://github.com/INDAPlus21/eliasfl-chess"
license = "MIT"
version = "1.1.0"
edition = "2018"
rust-version = "1.53.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"